# LangMem-Insurance-Claims-Copilot-

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
customer_support_agent/api/: app_factory.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/public/: .gitkeep
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/claims/[id]/: page.tsx
frontend/src/app/claims/new/: page.tsx
frontend/src/components/claims/: ClaimsList.tsx  ContextAuditPanel.tsx  DraftPanel.tsx  FnolForm.tsx  MemoryProbe.tsx
frontend/src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  toast.tsx
frontend/src/lib/: api.ts  types.ts  utils.ts
scripts/: generate_architecture_diagram.py
